# csgci-slack-bot

./: .env.example  .gitignore  README.md  pyproject.toml  slack_app_manifest.yaml
src/csgci_slack_bot/: bot.py  gci_client.py
