[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csgci-slack-bot"
version = "0.1.0"
description = "Slack bot for taking conversations to GCI Jams"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.20",
    "aiohttp>=3.10",
    "slack-sdk>=3.30",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/csgci_slack_bot"]
